app/less/style.less
/* ... */
/*********************************
    SUBSCRIBE SECTION STYLES
*********************************/
#subscribe                                  { padding: 30px 0; background-color: #eee; }
#subscribe p                                { margin-bottom: 0; line-height: 37.15px; }
#subscribe a                                { color: #595959; font-weight: 700; }
#subscribe .form                            { overflow: hidden; }
#subscribe .form > .form-group              { width: 80%; margin-bottom: 0; float: left; }
#subscribe .form > .form-group > input      { height: 37.15px; font-size: 14px; font-weight: 300; color: #ababab; border-radius: 0; border: none; }
#subscribe .form > button                   { float: left; width: 20%; }

/*********************************
    SEARCH SECTION STYLES
*********************************/
.search-form .form-group                    { position: relative; }
.search-form .form-group .glyphicon         { cursor: pointer; position: absolute; right: 10px; top: 10px; }
#search-header                              { padding-top: 30px; padding-bottom: 30px; background-color: #eee; }
#search-header h1                           { margin-top: 0; margin-bottom: 20px; }
#search-header p                            { margin-bottom: 0; }
#search-header .navigation-links            { margin-bottom: 10px; }
@media (max-width: 991px)                   { #search-header h1 { margin-bottom: 5px; } #search-header p { margin-bottom: 20px; } .dataset-icon { width: 20px; float: right; } .dataset-icon:last-child { margin-right: 15px; } }
#datasets-container                         { position: relative; overflow: hidden; }
#datasets-content                           { padding: 30px; }
#datasets-content table > tbody > tr        { cursor: pointer; }
#datasets-sidebar                           { padding-top: 20px; padding-bottom: 20px; background-color: #474747; }
#datasets-sidebar > h3,
#datasets-sidebar > h4                      { margin-top: 0; margin-bottom: 10px; font-size: 13px; text-transform: uppercase; color: #7c7c7c; }
#datasets-sidebar > h3                      { font-weight: 700; }
#datasets-sidebar > h4                      { margin-bottom: 30px; font-weight: 400; }
#datasets-sidebar ul                        { margin-bottom: 30px; list-style: none; padding-left: 0; }
#datasets-sidebar ul > li                   { height: auto; line-height: 18px; padding-top: 6px; padding-bottom: 6px; }
#datasets-sidebar ul > li.icon-item         { margin: 15px 0; padding-left: 50px; background-size: 21px; background-position: 5px 50%; background-repeat: no-repeat; }
#datasets-sidebar ul > li > a               { font-size: 13px; font-weight: 400; color: #7c7c7c; }
#datasets-sidebar ul > li.active > a,
#datasets-sidebar ul > li:hover > a         { color: #00d2a9; }
#datasets-sidebar ul > li.filter-all                { background-image: url(../img/ic-all.png); }
#datasets-sidebar ul > li.filter-health             { background-image: url(../img/ic-health.png); }
#datasets-sidebar ul > li.filter-geospatial         { background-image: url(../img/ic-geospatial.png); }
#datasets-sidebar ul > li.filter-security           { background-image: url(../img/ic-security.png); }
#datasets-sidebar ul > li.filter-energy             { background-image: url(../img/ic-energy.png); }
#datasets-sidebar ul > li.filter-education          { background-image: url(../img/ic-education.png); }
#datasets-sidebar ul > li.filter-economy            { background-image: url(../img/ic-economy.png); }
#datasets-sidebar ul > li.filter-culture            { background-image: url(../img/ic-culture.png); }
#datasets-sidebar ul > li.filter-finance            { background-image: url(../img/ic-finance.png); }
#datasets-sidebar ul > li.filter-infrastructure     { background-image: url(../img/ic-infrastructure.png); }
#datasets-sidebar ul > li.filter-development        { background-image: url(../img/ic-development.png); }
#datasets-sidebar ul > li.filter-government         { background-image: url(../img/ic-government.png); }
#datasets-sidebar ul > li.filter-others             { background-image: url(../img/ic-others.png); }

/*********************************
    DATASETS SECTION STYLES
*********************************/
.dataset-details,
.organization-details                       { margin-top: 50px; padding-bottom: 50px; }
.organization-details .organization-image,
.dataset-details .organization-image        { height: 170px; margin-bottom: 30px; padding: 15px; background-color: #eee; }
.organization-details p                     { -webkit-hyphens: auto; -moz-hyphens: auto; -ms-hyphens: auto; hyphens: auto; }
.dataset-details .organization-image > img  { vertical-align: middle; }
.dataset-details h1                         { margin-top: 0; margin-bottom: 30px; }
.dataset-details h4                         { margin: 20px 0; font-size: 14px; font-weight: 700; color: #474747; }
.dataset-details h5                         { margin: 30px 0; text-transform: uppercase; }
.dataset-details ul                         { padding-left: 0; list-style: none; overflow: hidden; }
.dataset-details .dataset-resources > li    { background-color: #eee; margin-bottom: 30px; padding: 20px; position: relative; }
.dataset-details .dataset-resources li a    { display: block; font-size: 14px; font-weight: 600; color: #474747; overflow: hidden; }
.dataset-details .dataset-resources span    { padding: 20px; line-height: 56px; background-color: #d8d8d8; position: absolute; right: 0; top: 0; bottom: 0; }
.dataset-details .dataset-tags > li         { margin-right: 10px; margin-bottom: 10px; padding: 5px 10px; float: left; background-color: #0c9; color: #fff; }
.dataset-details .table > tbody > tr > td   { font-size: 12px; }
table.data > tbody > tr                     { cursor: pointer; }
/* ... */

